tests/script/negative/duplicates/constructors.s
type t1 { C }
type t2 { C }
type t3 { D; E; D }
